# bidi-higher-rank-poly

./: .gitignore  LICENSE  README.md  bhrp.opam  bidi-higher-rank-poly.opam  dune  dune-project  dune-workspace
back/: Check.ml  Check.mli  Context.ml  Context.mli  Copy.ml  Copy.mli  Naming.ml  Print.ml  Print.mli  Syntax.ml  Valid.ml  Valid.mli  dune
back/lib/: Check.ml  Check.mli  Constants.ml  Context.ml  Context.mli  Copy.ml  Copy.mli  Naming.ml  Naming.mli  Print.ml  Print.mli  Syntax.ml  Valid.ml  Valid.mli  dune
back/test/: Main.ml
data/: apply.bhrp  cons.bhrp  id_type.bhrp
examples/: apply.bhrp  id_type.bhrp  product.bhrp
front/: Interp.ml  Lexer.mll  Native.ml  Parser.mly  dune
front/lib/: Interp.ml  Lexer.mll  Native.ml  Parser.mly  Value.ml  dune
front/test/: Main.ml  Tests.ml  dune
misc/: profile.csv  profile_extract.py
repl/: Main.ml  dune
shared/lib/: Expr.ml  Mono.ml  Poly.ml  Simple.ml  dune
test/: Check.ml  Expr.ml  Main.ml  Mono.ml  Poly.ml  Simple.ml  dune
top/: Interp.ml  Lexer.mll  Main.ml  Native.ml  Parser.mly  dune
util/: Env.ml  Env.mli  Extra.ml  Result.ml  Set.ml  Set.mli  Typeset.ml  Typeset.mli  dune
util/lib/: AVL.ml  Env.ml  Env.mli  Extra.ml  Infix.ml  Map.ml  Option.ml  Order.ml  Result.ml  Set.ml  Typeset.ml  Typeset.mli  dune
util/test/: EDSL.ml  Main.ml  Spec.ml  Word.ml  dune
