opam-version: "2.0"
version: "1.0"
maintainer: "sorennorbaek@gmail.com"
authors: ["Soren Norbaek <sorennorbaek@gmail.com>"]
synopsis: "Didactic OCaml implementation of the bidirectional higher-rank polymorphic type checker"
dev-repo: "git+https://github.com/soren-n/bidi-higher-rank-poly.git"
bug-reports: "https://github.com/soren-n/bidi-higher-rank-poly/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {>= "2.0"}
  "qcheck" {>= "0.12"}
]
